--- a/football-style.css
+++ b/football-style.css
@@ -166,3 +166,92 @@ header{
     font-size:30px;
     margin-right:5px;
 }
+
+
+
+/*----------Media query------------*/
+
+@media only screen and (max-width:688px){
+    nav{
+        width:100%;
+    }
+    nav .login{
+        display:block;
+        width:50%;
+    }
+    .content .header-button{
+        padding:10px;
+        margin-left:0px;
+    }
+    .header-content{
+        display:block;
+    }
+    .content img{
+        height:300px;
+        width:400px;
+        transition:width 1s,height 1s, transform 1s;
+    }
+    .header-content .content img:hover{
+        height:310px;
+        width:410px;
+        transform:rotate(5deg);
+    }
+    .players{
+        grid-template-columns:repeat(1,1fr);
+     }
+    .player{
+        flex-direction:column;
+        width:50%;
+    }
+    .highlight{
+    display:block;
+    }
+    .highlight-content img{
+    height:280px;
+    width:380px;
+    }
+    .footer-img img{
+    height:80px;
+    width:440px;
+    }
+}
+
+
+
+@media only screen and (min-width:688px) and (max-width:992px){
+    nav{
+        width:100%;
+    }
+    .header-content{
+        display:block;
+    }
+    .content img{
+        height:500px;
+        width:600px;
+        transition:width 1s,height 1s, transform 1s;
+    }
+
+
+    .header-content .content img:hover{
+        height:510px;
+        width:610px;
+        transform:rotate(5deg);
+    }
+    .players{
+        grid-template-columns:repeat(2,1fr);
+     }
+    .player{
+        flex-direction:column;
+    }
+    .highlight{
+    display:block;
+    }
+    .highlight-content img{
+    height:500px;
+    width:650px;
+    }
+    .footer-img img{
+    height:120px;
+    width:500px;
+    }
+}
